--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,14 +1,14 @@
 {
   "appName": {
-    "message": "Ext Starter",
+    "message": "Band Protocol Wallet",
     "description": "The name of the extension."
   },
   "appDescription": {
-    "message": "Boilerplate for building cross browser extensions",
+    "message": "Browser extension for connecting with dApp on Band Protocol.",
     "description": "The description of the extension."
   },
   "btnTooltip": {
-    "message": "Ext Starter",
+    "message": "Band Protocol Wallet",
     "description": "Tooltip for the button."
   }
 }
